--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   },
   "homepage": "https://github.com/matttali09/bamazon#readme",
   "dependencies": {
+    "cli": "^1.0.1",
+    "cli-table": "^0.3.1",
+    "colors": "^1.3.3",
     "console.table": "^0.10.0",
     "inquirer": "^6.2.1",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "table": "^5.1.1"
   }
 }
